Add CrashPlan service.

--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -21,3 +21,8 @@ define command{
 	command_name	check_knockd
 	command_line	/usr/local/lib/nagios/check_knockd
 }
+
+define command{
+	command_name	check_crashplan
+	command_line	/usr/local/lib/nagios/check_crashplan
+}
