--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -50,6 +50,12 @@ define service{
         check_command			check_knockd
 }
 
+define service{
+        use                             localhost
+        service_description             CrashPlan
+        check_command			check_crashplan
+}
+
 ##################################################################################
 # DEFAULT CHECKS #
 ##################################################################################
