Add sda S.M.A.R.T. monitoring. Add management from web.
By Y. Apollov <apollovy@gmail.com>

--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -26,3 +26,8 @@ define command{
 	command_name	check_crashplan
 	command_line	/usr/local/lib/nagios/check_crashplan
 }
+
+define command{
+	command_name	check_ide_smart
+	command_line	sudo /usr/lib/nagios/plugins/check_ide_smart -n /dev/sda
+}
