--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -31,3 +31,8 @@ define command{
 	command_name	check_ide_smart
 	command_line	sudo /usr/lib/nagios/plugins/check_ide_smart -n /dev/sda
 }
+
+define command{
+	command_name	check_mpd
+	command_line	/usr/local/lib/nagios/check_mpd
+}
