--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -62,6 +62,12 @@ define service{
         check_command			check_ide_smart!'/dev/sda'
 }
 
+define service{
+        use                             localhost
+        service_description             mpd Music Player Daemon
+        check_command			check_mpd
+}
+
 ##################################################################################
 # DEFAULT CHECKS #
 ##################################################################################
