Coment out apt-updates alert.

--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -101,9 +101,9 @@ define service {
         service_description             SSH
 	check_command                   check_ssh
 }
-define service{
-        use                             localhost
-        service_description             Apt updates
-        check_command			check_apt_distupgrade
-	normal_check_interval		24*60
-}
+#define service{
+#        use                             localhost
+#        service_description             Apt updates
+#        check_command			check_apt_distupgrade
+#	normal_check_interval		24*60
+#}
