Add N900 scripts and configs.

--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -36,3 +36,13 @@ define command{
 	command_name	check_mpd
 	command_line	/usr/local/lib/nagios/check_mpd
 }
+
+define command{
+	command_name	check_ssh_n900_mpd
+	command_line	/usr/local/lib/nagios/n900/check_mpd
+}
+
+define command{
+	command_name	check_ssh_n900_shairport
+	command_line	/usr/local/lib/nagios/n900/check_shairport
+}
