Add glusterfs crashplan mount to check.

--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -46,3 +46,8 @@ define command{
 	command_name	check_ssh_n900_shairport
 	command_line	/usr/local/lib/nagios/n900/check_shairport
 }
+
+define command{
+	command_name	check_glusterfs_crashplan_mount
+	command_line	/usr/local/lib/nagios/check_glusterfs_crashplan_mount
+}
