--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -107,3 +107,8 @@ define service {
 #        check_command			check_apt_distupgrade
 #	normal_check_interval		24*60
 #}
+define service {
+        use                             localhost
+        service_description             glusterfs crashplan mount
+	check_command                   check_glusterfs_crashplan_mount
+}
