--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -81,6 +81,7 @@ define service{
 define service{
 	use				localhost
         service_description             Current Load
+	notification_period		workhours
 	check_command                   check_load!5.0!4.0!3.0!10.0!6.0!4.0
 }
 
