Add HTTP service to zabbix.

--- a/conf.d/zabbix.fsfarm.mixero.com.cfg
+++ b/conf.d/zabbix.fsfarm.mixero.com.cfg
@@ -6,3 +6,13 @@ define host{
         host_name	                zabbix.fsfarm.mixero.com
         address                 	zabbix.fsfarm.mixero.com
 }
+##################################################################################
+# SPECIFIC SERVICES #
+##################################################################################
+
+define service{
+        use                             generic-service
+	host_name			zabbix.fsfarm.mixero.com
+        service_description             HTTP
+        check_command			check_http
+}
