--- a/conf.d/kotelok.office.cfg
+++ b/conf.d/kotelok.office.cfg
@@ -5,4 +5,5 @@ define host{
         use				generic-host
         host_name	                kotelok.office
         address                 	84.52.100.222
+        check_command			check_http
 }
