Rename router. Add video.

--- a/conf.d/router.cfg
+++ b/conf.d/router.cfg
@@ -3,8 +3,8 @@
 ##################################################################################
 define host{
         use				generic-host
-        host_name	                TP-LINK-TL-WDR3600
-        address                 	TP-LINK-TL-WDR3600
+        host_name	                router
+        address                 	router
 }
 ##################################################################################
 # SPECIFIC SERVICES #
@@ -12,7 +12,7 @@ define host{
 
 define service{
         use                             generic-service
-	host_name			TP-LINK-TL-WDR3600
+	host_name			router
         service_description             HTTP
         check_command			check_http
 }
