Add kodi to list of watched services.

--- a/conf.d/commands.cfg
+++ b/conf.d/commands.cfg
@@ -36,3 +36,8 @@ define command{
 	command_name	check_mpd
 	command_line	/usr/local/lib/nagios/check_mpd
 }
+
+define command{
+	command_name	check_kodi
+	command_line	/etc/nagios3/scripts/check_kodi
+}
