--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -56,6 +56,12 @@ define service{
         check_command			check_ide_smart!'/dev/sda'
 }
 
+define service{
+        use                             localhost
+        service_description             Kodi
+        check_command			check_kodi
+}
+
 ##################################################################################
 # DEFAULT CHECKS #
 ##################################################################################
