--- a/conf.d/localhost_nagios2.cfg
+++ b/conf.d/localhost_nagios2.cfg
@@ -58,6 +58,12 @@ define service{
 
 define service{
         use                             localhost
+        service_description             sdc S.M.A.R.T.
+        check_command			check_ide_smart!'/dev/sdc'
+}
+
+define service{
+        use                             localhost
         service_description             Kodi
         check_command			check_kodi
 }
